--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: '3.9'
 
 services:
   app:
@@ -7,9 +7,10 @@ services:
       args:
         - DEV=true
     ports:
-      - "8000:8000"
+      - '8000:8000'
     volumes:
       - ./app:/app
+      - dev-static-data:/vol/web
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -33,3 +34,4 @@ services:
 
 volumes:
   dev-db-data:
+  dev-static-data:
